--- a/.env.example
+++ b/.env.example
@@ -5,11 +5,8 @@
 MONGO_URI=mongodb://localhost:27017/gestion_school
 
 # JWT (clé secrète pour signer les tokens — utiliser une chaîne longue et aléatoire en production)
-JWT_SECRET=votre_cle_secrete_jwt_tres_longue_et_aleatoire
+JWT_SECRET=12345
 
 # Port du serveur (optionnel, défaut 5000)
 PORT=5000
 
-# En production : URL(s) du frontend pour CORS (séparer par des virgules si plusieurs)
-# Exemple : FRONTEND_URL=https://gestion-school.vercel.app
-# FRONTEND_URL=
